FIX: table cell with amount data aligned in the end of line in payments table

--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -196,6 +196,7 @@
       &.amount {
         flex: 0 1 20%;
         max-width: 20%;
+        margin-left: auto;
 
         @include media-breakpoint-up($desktop-breakpoint) {
           flex: 0 1 20.5%;
